--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <div id="container">
       <div id="profile">
-          <img src="./assets/avatar.png" alt="Foto de perfil do usuário no modo dark">
-          <p>@maybrito</p>
+          <img src="./assets/andy-avatar-dark.jpg" alt="Foto de perfil do usuário no modo dark">
+          <p>@andersonalves</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -21,34 +21,34 @@
       </div>
       <ul>
         <li>
-          <a href="#" target="_blank">Inscreva-se no NLW</a>
+          <a href="https://github.com/anderalves00" target="_blank">Github</a>
         </li>
         <li>
-          <a href="#" target="_blank">Baixe o meu e-book</a>
+          <a href="https://linkedin.com/in/anderson-fernandes-alves-45a52b56/" target="_blank">Linkedin</a>
         </li>
         <li>
-          <a href="https://github.com/anderalves00" target="_blank">Veja meu portfólio</a>
+          <a href="https://www.youtube.com/channel/UCCcrvtL97acL_1kIBSQNlXg" target="_blank">YouTube</a>
         </li>
         <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank">Conheça o Explorer</a>
+          <a href="https://wa.me/5513974064934" target="_blank">Entre em contato</a>
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/maykbrito" target="_blank">
+        <a href="https://github.com/anderalves00" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://instagram.com/maykbrito" target="_blank">
+        <a href="https://instagram.com/ander_alves00" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://youtube.com/maykbrito" target="_blank">
+        <a href="https://www.youtube.com/channel/UCCcrvtL97acL_1kIBSQNlXg" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
-        <a href="https://linkedin.com/in/maykbrito" target="_blank">
+        <a href="https://linkedin.com/in/anderson-fernandes-alves-45a52b56/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
       <footer>
-        Feito com ♥ por <a href="https://linkedin.com/in/maykbrito">Anderson</a>
+        Feito com ♥ por <a href="https://linkedin.com/in/anderson-fernandes-alves-45a52b56/">Anderson</a>
       </footer>
     </div>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
